New charts admin

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "chart.js": "^4.4.6",
+        "chartjs-plugin-zoom": "^2.0.1",
         "preline": "^2.5.0",
         "sweetalert2": "^11.14.1"
     }
