--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "jantinnerezo/livewire-alert": "^3.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.5"
+        "leandrocfe/filament-apex-charts": "^3.1",
+        "livewire/livewire": "^3.5",
+        "stripe/stripe-php": "^16.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
